# fast-api-lms

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1808a0bb8f35_.py
api/: users.py
db/: db_setup.py
db/models/: mixins.py
