[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["MrYuriy <yuriybabiyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastsapi = "^0.111.2"
fastapi = "^0.111.0"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
